[gd_scene load_steps=2 format=2]

[ext_resource path="res://Exercício de programação - semana 5.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 208.0
margin_top = 64.0
margin_right = 432.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="LineEdit"]
margin_right = 224.0
margin_bottom = 136.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 728.0
margin_top = 256.0
margin_right = 872.0
margin_bottom = 592.0
color = Color( 0.0862745, 0.054902, 0.184314, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 144.0
margin_bottom = 336.0
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 640.0
margin_right = 960.0
margin_bottom = 224.0
color = Color( 0.145098, 0.113725, 0.219608, 1 )

[node name="Label" type="Label" parent="ColorRect2"]
margin_right = 320.0
margin_bottom = 224.0
autowrap = true

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 256.0
margin_right = 128.0
margin_bottom = 320.0

[node name="Button2" type="Button" parent="."]
margin_left = 256.0
margin_top = 256.0
margin_right = 384.0
margin_bottom = 320.0

[node name="Button3" type="Button" parent="."]
margin_left = 512.0
margin_top = 256.0
margin_right = 640.0
margin_bottom = 320.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
